; ModuleID = '/home/carl/AnghaBench/zstd/lib/legacy/extr_zstd_v07.c_ZSTDv07_decodeSeqHeaders.c'
source_filename = "/home/carl/AnghaBench/zstd/lib/legacy/extr_zstd_v07.c_ZSTDv07_decodeSeqHeaders.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MIN_SEQUENCES_SIZE = common dso_local global i64 0, align 8
@srcSize_wrong = common dso_local global i32 0, align 4
@LONGNBSEQ = common dso_local global i32 0, align 4
@MaxLL = common dso_local global i32 0, align 4
@LLFSELog = common dso_local global i32 0, align 4
@LL_defaultNorm = common dso_local global i32 0, align 4
@LL_defaultNormLog = common dso_local global i32 0, align 4
@corruption_detected = common dso_local global i32 0, align 4
@MaxOff = common dso_local global i32 0, align 4
@OffFSELog = common dso_local global i32 0, align 4
@OF_defaultNorm = common dso_local global i32 0, align 4
@OF_defaultNormLog = common dso_local global i32 0, align 4
@MaxML = common dso_local global i32 0, align 4
@MLFSELog = common dso_local global i32 0, align 4
@ML_defaultNorm = common dso_local global i32 0, align 4
@ML_defaultNormLog = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32*, i32*, i32*, i32, i8*, i64)* @ZSTDv07_decodeSeqHeaders to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ZSTDv07_decodeSeqHeaders(i32* %0, i32* %1, i32* %2, i32* %3, i32 %4, i8* %5, i64 %6) #0 {
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i64, align 8
  %24 = alloca i64, align 8
  %25 = alloca i64, align 8
  store i32* %0, i32** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32* %2, i32** %11, align 8
  store i32* %3, i32** %12, align 8
  store i32 %4, i32* %13, align 4
  store i8* %5, i8** %14, align 8
  store i64 %6, i64* %15, align 8
  %26 = load i8*, i8** %14, align 8
  %27 = bitcast i8* %26 to i32*
  store i32* %27, i32** %16, align 8
  %28 = load i32*, i32** %16, align 8
  %29 = load i64, i64* %15, align 8
  %30 = getelementptr inbounds i32, i32* %28, i64 %29
  store i32* %30, i32** %17, align 8
  %31 = load i32*, i32** %16, align 8
  store i32* %31, i32** %18, align 8
  %32 = load i64, i64* %15, align 8
  %33 = load i64, i64* @MIN_SEQUENCES_SIZE, align 8
  %34 = icmp ult i64 %32, %33
  br i1 %34, label %35, label %38

35:                                               ; preds = %7
  %36 = load i32, i32* @srcSize_wrong, align 4
  %37 = call i64 @ERROR(i32 %36)
  store i64 %37, i64* %8, align 8
  br label %191

38:                                               ; preds = %7
  %39 = load i32*, i32** %18, align 8
  %40 = getelementptr inbounds i32, i32* %39, i32 1
  store i32* %40, i32** %18, align 8
  %41 = load i32, i32* %39, align 4
  store i32 %41, i32* %19, align 4
  %42 = load i32, i32* %19, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %46, label %44

44:                                               ; preds = %38
  %45 = load i32*, i32** %9, align 8
  store i32 0, i32* %45, align 4
  store i64 1, i64* %8, align 8
  br label %191

46:                                               ; preds = %38
  %47 = load i32, i32* %19, align 4
  %48 = icmp sgt i32 %47, 127
  br i1 %48, label %49, label %83

49:                                               ; preds = %46
  %50 = load i32, i32* %19, align 4
  %51 = icmp eq i32 %50, 255
  br i1 %51, label %52, label %67

52:                                               ; preds = %49
  %53 = load i32*, i32** %18, align 8
  %54 = getelementptr inbounds i32, i32* %53, i64 2
  %55 = load i32*, i32** %17, align 8
  %56 = icmp ugt i32* %54, %55
  br i1 %56, label %57, label %60

57:                                               ; preds = %52
  %58 = load i32, i32* @srcSize_wrong, align 4
  %59 = call i64 @ERROR(i32 %58)
  store i64 %59, i64* %8, align 8
  br label %191

60:                                               ; preds = %52
  %61 = load i32*, i32** %18, align 8
  %62 = call i32 @MEM_readLE16(i32* %61)
  %63 = load i32, i32* @LONGNBSEQ, align 4
  %64 = add nsw i32 %62, %63
  store i32 %64, i32* %19, align 4
  %65 = load i32*, i32** %18, align 8
  %66 = getelementptr inbounds i32, i32* %65, i64 2
  store i32* %66, i32** %18, align 8
  br label %82

67:                                               ; preds = %49
  %68 = load i32*, i32** %18, align 8
  %69 = load i32*, i32** %17, align 8
  %70 = icmp uge i32* %68, %69
  br i1 %70, label %71, label %74

71:                                               ; preds = %67
  %72 = load i32, i32* @srcSize_wrong, align 4
  %73 = call i64 @ERROR(i32 %72)
  store i64 %73, i64* %8, align 8
  br label %191

74:                                               ; preds = %67
  %75 = load i32, i32* %19, align 4
  %76 = sub nsw i32 %75, 128
  %77 = shl i32 %76, 8
  %78 = load i32*, i32** %18, align 8
  %79 = getelementptr inbounds i32, i32* %78, i32 1
  store i32* %79, i32** %18, align 8
  %80 = load i32, i32* %78, align 4
  %81 = add nsw i32 %77, %80
  store i32 %81, i32* %19, align 4
  br label %82

82:                                               ; preds = %74, %60
  br label %83

83:                                               ; preds = %82, %46
  %84 = load i32, i32* %19, align 4
  %85 = load i32*, i32** %9, align 8
  store i32 %84, i32* %85, align 4
  %86 = load i32*, i32** %18, align 8
  %87 = getelementptr inbounds i32, i32* %86, i64 4
  %88 = load i32*, i32** %17, align 8
  %89 = icmp ugt i32* %87, %88
  br i1 %89, label %90, label %93

90:                                               ; preds = %83
  %91 = load i32, i32* @srcSize_wrong, align 4
  %92 = call i64 @ERROR(i32 %91)
  store i64 %92, i64* %8, align 8
  br label %191

93:                                               ; preds = %83
  %94 = load i32*, i32** %18, align 8
  %95 = load i32, i32* %94, align 4
  %96 = ashr i32 %95, 6
  store i32 %96, i32* %20, align 4
  %97 = load i32*, i32** %18, align 8
  %98 = load i32, i32* %97, align 4
  %99 = ashr i32 %98, 4
  %100 = and i32 %99, 3
  store i32 %100, i32* %21, align 4
  %101 = load i32*, i32** %18, align 8
  %102 = load i32, i32* %101, align 4
  %103 = ashr i32 %102, 2
  %104 = and i32 %103, 3
  store i32 %104, i32* %22, align 4
  %105 = load i32*, i32** %18, align 8
  %106 = getelementptr inbounds i32, i32* %105, i32 1
  store i32* %106, i32** %18, align 8
  %107 = load i32*, i32** %10, align 8
  %108 = load i32, i32* %20, align 4
  %109 = load i32, i32* @MaxLL, align 4
  %110 = load i32, i32* @LLFSELog, align 4
  %111 = load i32*, i32** %18, align 8
  %112 = load i32*, i32** %17, align 8
  %113 = load i32*, i32** %18, align 8
  %114 = ptrtoint i32* %112 to i64
  %115 = ptrtoint i32* %113 to i64
  %116 = sub i64 %114, %115
  %117 = sdiv exact i64 %116, 4
  %118 = trunc i64 %117 to i32
  %119 = load i32, i32* @LL_defaultNorm, align 4
  %120 = load i32, i32* @LL_defaultNormLog, align 4
  %121 = load i32, i32* %13, align 4
  %122 = call i64 @ZSTDv07_buildSeqTable(i32* %107, i32 %108, i32 %109, i32 %110, i32* %111, i32 %118, i32 %119, i32 %120, i32 %121)
  store i64 %122, i64* %23, align 8
  %123 = load i64, i64* %23, align 8
  %124 = call i64 @ZSTDv07_isError(i64 %123)
  %125 = icmp ne i64 %124, 0
  br i1 %125, label %126, label %129

126:                                              ; preds = %93
  %127 = load i32, i32* @corruption_detected, align 4
  %128 = call i64 @ERROR(i32 %127)
  store i64 %128, i64* %8, align 8
  br label %191

129:                                              ; preds = %93
  %130 = load i64, i64* %23, align 8
  %131 = load i32*, i32** %18, align 8
  %132 = getelementptr inbounds i32, i32* %131, i64 %130
  store i32* %132, i32** %18, align 8
  %133 = load i32*, i32** %12, align 8
  %134 = load i32, i32* %21, align 4
  %135 = load i32, i32* @MaxOff, align 4
  %136 = load i32, i32* @OffFSELog, align 4
  %137 = load i32*, i32** %18, align 8
  %138 = load i32*, i32** %17, align 8
  %139 = load i32*, i32** %18, align 8
  %140 = ptrtoint i32* %138 to i64
  %141 = ptrtoint i32* %139 to i64
  %142 = sub i64 %140, %141
  %143 = sdiv exact i64 %142, 4
  %144 = trunc i64 %143 to i32
  %145 = load i32, i32* @OF_defaultNorm, align 4
  %146 = load i32, i32* @OF_defaultNormLog, align 4
  %147 = load i32, i32* %13, align 4
  %148 = call i64 @ZSTDv07_buildSeqTable(i32* %133, i32 %134, i32 %135, i32 %136, i32* %137, i32 %144, i32 %145, i32 %146, i32 %147)
  store i64 %148, i64* %24, align 8
  %149 = load i64, i64* %24, align 8
  %150 = call i64 @ZSTDv07_isError(i64 %149)
  %151 = icmp ne i64 %150, 0
  br i1 %151, label %152, label %155

152:                                              ; preds = %129
  %153 = load i32, i32* @corruption_detected, align 4
  %154 = call i64 @ERROR(i32 %153)
  store i64 %154, i64* %8, align 8
  br label %191

155:                                              ; preds = %129
  %156 = load i64, i64* %24, align 8
  %157 = load i32*, i32** %18, align 8
  %158 = getelementptr inbounds i32, i32* %157, i64 %156
  store i32* %158, i32** %18, align 8
  %159 = load i32*, i32** %11, align 8
  %160 = load i32, i32* %22, align 4
  %161 = load i32, i32* @MaxML, align 4
  %162 = load i32, i32* @MLFSELog, align 4
  %163 = load i32*, i32** %18, align 8
  %164 = load i32*, i32** %17, align 8
  %165 = load i32*, i32** %18, align 8
  %166 = ptrtoint i32* %164 to i64
  %167 = ptrtoint i32* %165 to i64
  %168 = sub i64 %166, %167
  %169 = sdiv exact i64 %168, 4
  %170 = trunc i64 %169 to i32
  %171 = load i32, i32* @ML_defaultNorm, align 4
  %172 = load i32, i32* @ML_defaultNormLog, align 4
  %173 = load i32, i32* %13, align 4
  %174 = call i64 @ZSTDv07_buildSeqTable(i32* %159, i32 %160, i32 %161, i32 %162, i32* %163, i32 %170, i32 %171, i32 %172, i32 %173)
  store i64 %174, i64* %25, align 8
  %175 = load i64, i64* %25, align 8
  %176 = call i64 @ZSTDv07_isError(i64 %175)
  %177 = icmp ne i64 %176, 0
  br i1 %177, label %178, label %181

178:                                              ; preds = %155
  %179 = load i32, i32* @corruption_detected, align 4
  %180 = call i64 @ERROR(i32 %179)
  store i64 %180, i64* %8, align 8
  br label %191

181:                                              ; preds = %155
  %182 = load i64, i64* %25, align 8
  %183 = load i32*, i32** %18, align 8
  %184 = getelementptr inbounds i32, i32* %183, i64 %182
  store i32* %184, i32** %18, align 8
  %185 = load i32*, i32** %18, align 8
  %186 = load i32*, i32** %16, align 8
  %187 = ptrtoint i32* %185 to i64
  %188 = ptrtoint i32* %186 to i64
  %189 = sub i64 %187, %188
  %190 = sdiv exact i64 %189, 4
  store i64 %190, i64* %8, align 8
  br label %191

191:                                              ; preds = %181, %178, %152, %126, %90, %71, %57, %44, %35
  %192 = load i64, i64* %8, align 8
  ret i64 %192
}

declare dso_local i64 @ERROR(i32) #1

declare dso_local i32 @MEM_readLE16(i32*) #1

declare dso_local i64 @ZSTDv07_buildSeqTable(i32*, i32, i32, i32, i32*, i32, i32, i32, i32) #1

declare dso_local i64 @ZSTDv07_isError(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
